ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  # namespace: default
  namespace: ingress-nginx

spec:
  ingressClassName: nginx
  rules:
  - host: pitambar.bhadra.co.in
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: simple-app-service
              port:
                number: 80
